--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite App</title>
-        <!-- <link rel="stylesheet" href="./src/assets/css/style.css" /> -->
+        <link rel="stylesheet" href="./src/assets/css/style.css" />
     </head>
     <body>
         <div id="app"></div>
-        <!-- <script type="module" src="./src/assets/js/jquery.min.js"></script> -->
+        <script type="module" src="./src/assets/js/jquery.min.js"></script>
         <script type="module" src="./src/main.js"></script>
     </body>
 </html>
