--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="./src/assets/js/jquery.min.js"></script>
+        <!-- <script type="module" src="./src/assets/js/jquery.min.js"></script> -->
         <script type="module" src="./src/main.js"></script>
     </body>
 </html>
