--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -4,13 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <title>Vite + React</title>
     </head>
     <body>
-        <div class="container">
-            <div class="grid grid-cols-2 gap-8" id="banner"></div>
-        </div>
-        <script type="module" src="./main.js"></script>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
