--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -7,6 +7,18 @@
         <title>Vite + React</title>
     </head>
     <body>
+        <header>
+            <div class="logo"><a href=""></a></div>
+            <form action="">
+                <input type="text" />
+            </form>
+            <nav>
+                <ul>
+                    <li>123</li>
+                </ul>
+            </nav>
+        </header>
+
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
