--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,9 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite + React</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="thuvien.js"></script>
+        <script>
+            newFunction();
+        </script>
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
+        <!-- <script type="module" src="/src/main.jsx"></script> -->
+        <script src="./ontap/callback.js"></script>
     </body>
 </html>
