--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -7,7 +7,9 @@
         <title>Vite + React</title>
     </head>
     <body>
+        <div id="products"></div>
+        <button id="button">Delete</button>
         <div id="root"></div>
-        <script type="module" src="./ontap/callback.js"></script>
+        <script type="module" src="./ontap/fetch.js"></script>
     </body>
 </html>
