--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -18,7 +18,8 @@
         ></script>
     </head>
     <body>
+        <div id="products"></div>
         <div id="root"></div>
-        <script type="module" src="./ontap/callback.js"></script>
+        <script type="module" src="./ontap/fetch.js"></script>
     </body>
 </html>
