--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div id="products"></div>
-        <button id="button">Delete</button>
+        <button id="buttonAdd">ADD</button>
+        <button id="buttonDelete">Delete</button>
+        <button id="buttonEdit">Edit</button>
         <div id="root"></div>
         <script type="module" src="./ontap/fetch.js"></script>
     </body>
