--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -7,11 +7,7 @@
         <title>Vite + React</title>
     </head>
     <body>
-        <div id="products"></div>
-        <button id="buttonAdd">ADD</button>
-        <button id="buttonDelete">Delete</button>
-        <button id="buttonEdit">Edit</button>
         <div id="root"></div>
-        <script type="module" src="./ontap/fetch.js"></script>
+        <script type="module" src="./src/main.jsx"></script>
     </body>
 </html>
