--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -18,11 +18,7 @@
         ></script>
     </head>
     <body>
-        <button id="button-add">Thêm</button>
-        <button id="button-edit">Cập nhật</button>
-        <button id="button-delete">Xóa</button>
-        <div id="products"></div>
         <div id="root"></div>
-        <script type="module" src="./ontap/fetch.js"></script>
+        <script type="module" src="./src/main.jsx"></script>
     </body>
 </html>
