--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,8 +8,9 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+        <div id="products"></div>
         <div id="root"></div>
         <!-- <script type="module" src="/src/main.jsx"></script> -->
-        <script src="./ontap/callback.js"></script>
+        <script src="./ontap/fetch.js"></script>
     </body>
 </html>
