--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite + React</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <script src="thuvien.js"></script>
-        <script>
-            newFunction();
-        </script>
     </head>
     <body>
+        <button id="btn-add">Thêm</button>
+        <button id="btn-update">Cập nhật</button>
+        <button id="btn-delete">Xóa</button>
+        <div id="products"></div>
         <div id="root"></div>
         <!-- <script type="module" src="/src/main.jsx"></script> -->
-        <script src="./ontap/callback.js"></script>
+        <script type="module" src="./src/main.jsx"></script>
     </body>
 </html>
