--- a/my-react-project/index.html
+++ b/my-react-project/index.html
@@ -8,7 +8,11 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+        <button id="btn-add">Thêm</button>
+        <button id="btn-update">Cập nhật</button>
+        <button id="btn-delete">Xóa</button>
+        <div id="products"></div>
         <div id="root"></div>
-        <script type="module" src="./ontap/promise.js"></script>
+        <script type="module" src="./ontap/fetch.js"></script>
     </body>
 </html>
