--- a/my-project/index.html
+++ b/my-project/index.html
@@ -5,12 +5,9 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite + React</title>
-        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
-        <div id="products"></div>
         <div id="root"></div>
-        <!-- <script type="module" src="/src/main.jsx"></script> -->
-        <script src="./ontap/fetch.js"></script>
+        <script type="module" src="./src/main.jsx"></script>
     </body>
 </html>
